--- a/pdf_deep_link.htm
+++ b/pdf_deep_link.htm
@@ -35,14 +35,14 @@
         const params = new URLSearchParams(window.location.search);
         const url = params.get('site');
         const proxyUrl = `https://api.allorigins.win/get?url=${encodeURIComponent(url)}`;
-        const hash = window.location.hash;
-        const searchString = decodeURIComponent(hash.replace('#:~:text=', '').replace(/\s+/g, ' ').trim());
+        const searchString = params.get('search') ? decodeURIComponent(params.get('search')).replace(/\s+/g, ' ').trim() : '';
         const searchRegex = new RegExp(searchString.replace(/\s+/g, '\\s*'), 'i');
         const loadingIndicator = document.getElementById('loadingIndicator');
         const pdfContainer = document.getElementById('pdfContainer');
         const pages = [];  // Initialise pages array
 
         console.log(`Fetching PDF from: ${proxyUrl}`);
+        console.log(`Search string: ${searchString}`);
         fetch(proxyUrl)
             .then(response => {
                 console.log('Received response from proxy');
@@ -81,7 +81,7 @@
                         totalCharacters += text.length;
                         totalWords += text.split(/\s+/).length;
 
-                        if (searchRegex.test(text)) {
+                        if (searchString && searchRegex.test(text)) {
                             console.log(`Found "${searchString}" on page ${pageNum}`);
                             targetPageNum = pageNum;
                             const viewport = page.getViewport({scale: 1.5});
